--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #000000;
     font-family: "Lato", sans-serif;
-    font-size: 16px; /* Sets the font size to 16px */
+    font-size: 18px; /* Sets the font size to 16px */
     font-weight: 400; /* Sets the font weight to 300 */
     line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
     color: #ffffff;
@@ -87,7 +87,8 @@ a:active {
     font-weight: 400;
     padding: 10px;
     border-radius: 10px;
-    transition: 0.2s opacity;
+    transition-duration: 0.2s;
+    transition-property: opacity
 }
 .button:hover {
     opacity: 0.8; /* Reduces the opacity of the button to 80% */
@@ -157,7 +158,75 @@ nav > ul > li > a:active {
     padding: 20px 0;
     display: inline-block;
     width: 100%;
+    text-align: center;
+}
+#hero span {
+  display: block;
 }
 main {
-    padding-top: 240px;
+    padding-top: 200px;
+}
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+}
+.col-md-6 {
+  width: 50%;
+}
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+}
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+}
+[class*="col-"] {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+@keyframes color-change {
+  from {fill: #edc655;}
+  to {fill: #f76414;}
+}
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
