--- a/css/style.css
+++ b/css/style.css
@@ -4,192 +4,222 @@ Primary colour (Black): #000000;
 Secondary colour (White): #FFFFFF;
 Tertiary colour (Blue): #099fe3;
 */
-
 header {
-    background-color: #000000;
-    padding: 10px 0 4px;
-    margin: 0px 0px;
-    -webkit-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
-    box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
-    width: 100%;
-    position: fixed;
+  background-color: #000;
+  padding: 10px 0 4px;
+  margin: 0px;
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.75);
+  width: 100%;
+  position: fixed;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: #ffffff;
-    font-family: "Lato", sans-serif;
-    font-size: 18px; /* Sets the font size to 16px */
-    font-weight: 400; /* Sets the font weight to 300 */
-    line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
-    color: #000000;
+  background-color: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+
+  /* Sets the font size to 16px */
+  font-weight: 400;
+
+  /* Sets the font weight to 300 */
+  line-height: 1.6;
+
+  /* Sets the line-height to 1.6 * the font-size */
+  color: #000;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    font-family: "Montserrat", sans-serif;
-    line-height: 1.4;
-    color: #000000;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.4;
+  color: #000;
 }
+
 h1 {
-    font-size: 2.75em;
-    font-weight: 700;
-    text-align: center; /* Centers text */
-    padding-top: 50px;
-    padding-bottom: 50px;
+  font-size: 2.75em;
+  font-weight: 700;
+  text-align: center;
+
+  /* Centers text */
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 h2 {
-    font-size: 2.25em;
-    font-weight: 700;
+  font-size: 2.25em;
+  font-weight: 700;
 }
 
 h3 {
-    font-size: 1.75em;
-    font-weight: 400;
+  font-size: 1.75em;
+  font-weight: 400;
 }
+
 h4 {
-    font-size: 1.35em;
-    font-weight: 400;
+  font-size: 1.35em;
+  font-weight: 400;
 }
+
 img {
-    width: 100%;
+  width: 100%;
 }
 
 a {
-    color: #099fe3;
-    text-decoration: none; /* No underlining */
+  color: #099fe3;
+  text-decoration: none;
+
+  /* No underlining */
 }
+
 a:visited {
-    /* visited link */
-    color: #9400D3;
+  /* visited link */
+  color: #9400d3;
 }
+
 a:hover {
-    opacity: 0.8;
-    color: #099fe3;
-    text-decoration: underline; /* Underlining when hovering over a link */
+  opacity: 0.8;
+  color: #099fe3;
+  text-decoration: underline;
+
+  /* Underlining when hovering over a link */
 }
+
 a:active {
-    /* selected link */
-    color: #994c30;
+  /* selected link */
+  color: #994c30;
 }
 
 .button {
-    display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-    background-color: #228c22;
-    color: #ffffff; /* needed to override the default link color */
-    font-weight: 400;
-    padding: 10px;
-    border-radius: 10px;
-    transition-duration: 0.2s;
-    transition-property: opacity
+  display: inline-block;
+
+  /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+  background-color: #228c22;
+  color: #fff;
+
+  /* needed to override the default link color */
+  font-weight: 400;
+  padding: 10px;
+  border-radius: 10px;
+  transition-duration: 0.2s;
+  transition-property: opacity;
 }
+
 .button:hover {
-    opacity: 0.8; /* Reduces the opacity of the button to 80% */
-    text-decoration: underline;
+  opacity: 0.8;
+
+  /* Reduces the opacity of the button to 80% */
+  text-decoration: underline;
 }
+
 .button.contact {
-    background-color: transparent;
-    color: #099fe3;
-    border: 2px solid #099fe3;
+  background-color: transparent;
+  color: #099fe3;
+  border: 2px solid #099fe3;
 }
+
 .button.contact:hover {
-    background-color: #099fe3;
-    color: #ffffff;
+  background-color: #099fe3;
+  color: #fff;
 }
+
 footer {
-text-align: center;
+  text-align: center;
 }
+
 footer .email {
-margin-bottom: 20px
-
+  margin-bottom: 20px;
 }
-/* Layout styling */
 
+/* Layout styling */
 .container {
-    padding: 0 15px;
-    margin: 0 auto;
-    max-width: 1440px
+  padding: 0 15px;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 .row {
-    margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;
+
+  /* 25px top and bottom, 0 left and right */
 }
 
 #work .row {
-    padding-bottom: 25px;
-    border-bottom: 1px solid #ffffff;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #fff;
 }
 
 .logo {
-    max-width: 150px;
+  max-width: 150px;
 }
 
-
-/*Navigation styling */
-
+/* Navigation styling */
 nav > ul {
-    list-style-type: none;
-    padding: 0;
-    margin-left: 0;
+  list-style-type: none;
+  padding: 0;
+  margin-left: 0;
 }
 
 nav > ul > li > a {
-    padding: 0 10px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #099fe3;
+  padding: 0 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #099fe3;
 }
+
 nav > ul > li > a:visited {
-    padding: 0 10px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #099fe3;
+  padding: 0 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #099fe3;
 }
+
 nav > ul > li > a:hover {
-    padding: 0 10px;
-    text-transform: uppercase;
-    text-decoration: underline;
-    font-weight: 700;
-    color: #099fe3;
+  padding: 0 10px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-weight: 700;
+  color: #099fe3;
 }
+
 nav > ul > li > a:active {
-    padding: 0 10px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #994c30;
+  padding: 0 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #994c30;
 }
-
-
-
-
 
 #hero {
-    background-color: #f8f8f8;
-    padding: 100px 0;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
+  background-color: #f8f8f8;
+  padding: 100px 0;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
 }
+
 #hero span {
   display: block;
 }
+
 main {
-    padding-top: 130px;
+  padding-top: 130px;
 }
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
-.navtoggle, .navtoggle.responsive {
+
+.navtoggle .navtoggle.responsive {
   position: relative;
 }
+
 .navtoggle li .icon {
   position: absolute;
   right: 0;
@@ -197,18 +227,22 @@ main {
   top: 30px;
   font-size: 20px;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
 }
+
 .navtoggle.responsive nav {
   padding: 24px 0 0;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
   padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
+  border-top: 1px solid rgba(255, 127, 80, 0.5);
 }
-.navtoggle.responsive li:last-child  {
+
+.navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
 
@@ -220,135 +254,251 @@ Medium devices (640px and larger)
     text-align: unset;
     padding: 20px 0 13px;
   }
+
   .logo {
-      max-width: 250px;
+    max-width: 250px;
   }
+
   nav {
     width: auto;
     float: right;
     margin-top: 4px;
   }
+
   nav > ul > li {
-  display: inline-block;
-}
-nav > ul {
-  margin: 1em 0;
-}
-.navtoggle li:not(:last-child) {
-  display: inline-block;
-}
-.navtoggle li:last-child {
-  display: none;
-}
-.navtoggle.responsive nav {
-  padding: 0 0 0;
-}
-.navtoggle.responsive li  {
-  padding: 0 0;
-  border-top: none;
-}
-.navtoggle.responsive li:last-child  {
-  padding: 0;
-}
+    display: inline-block;
+  }
+
+  nav > ul {
+    margin: 1em 0;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
+
+  .navtoggle.responsive nav {
+    padding: 0;
+  }
+
+  .navtoggle.responsive li {
+    padding: 0;
+    border-top: none;
+  }
+
+  .navtoggle.responsive li:last-child {
+    padding: 0;
+  }
+
   [class*="col-"] {
     float: left;
     padding-left: 10px;
     padding-right: 10px;
   }
+
   .row::after {
     content: "";
     clear: both;
     display: table;
   }
-  .col-md-1 {width: 8.33%;}
-  .col-md-2 {width: 16.66%;}
-  .col-md-3 {width: 25%;}
-  .col-md-4 {width: 33.33%;}
-  .col-md-5 {width: 41.66%;}
-  .col-md-6 {width: 50%;}
-  .col-md-7 {width: 58.33%;}
-  .col-md-8 {width: 66.66%;}
-  .col-md-9 {width: 75%;}
-  .col-md-10 {width: 83.33%;}
-  .col-md-11 {width: 91.66%;}
-  .col-md-12 {width: 100%;}
+
+  .col-md-1 {
+    width: 8.33%;
+  }
+
+  .col-md-2 {
+    width: 16.66%;
+  }
+
+  .col-md-3 {
+    width: 25%;
+  }
+
+  .col-md-4 {
+    width: 33.33%;
+  }
+
+  .col-md-5 {
+    width: 41.66%;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-7 {
+    width: 58.33%;
+  }
+
+  .col-md-8 {
+    width: 66.66%;
+  }
+
+  .col-md-9 {
+    width: 75%;
+  }
+
+  .col-md-10 {
+    width: 83.33%;
+  }
+
+  .col-md-11 {
+    width: 91.66%;
+  }
+
+  .col-md-12 {
+    width: 100%;
+  }
+
   .col-centered {
     float: none;
     margin: 0 auto;
   }
 }
 
-
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-nav {
-  width: auto;
-  float: right;
-  margin-top: 4px;
-}
-nav > ul > li {
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+
+  nav > ul > li {
     display: inline-block;
-}
-.navtoggle.responsive nav {
-  padding: 0 0 0;
-}
-.navtoggle.responsive li  {
-  padding: 0 0;
-  border-top: none;
-}
-.navtoggle.responsive li:last-child  {
-  padding: 0;
+  }
+
+  .navtoggle.responsive nav {
+    padding: 0;
+  }
+
+  .navtoggle.responsive li {
+    padding: 0;
+    border-top: none;
+  }
+
+  .navtoggle.responsive li:last-child {
+    padding: 0;
+  }
+
+  .col-lg-1 {
+    width: 8.33%;
+  }
+
+  .col-lg-2 {
+    width: 16.66%;
+  }
+
+  .col-lg-3 {
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    width: 33.33%;
+  }
+
+  .col-lg-5 {
+    width: 41.66%;
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    width: 58.33%;
+  }
+
+  .col-lg-8 {
+    width: 66.66%;
+  }
+
+  .col-lg-9 {
+    width: 75%;
+  }
+
+  .col-lg-10 {
+    width: 83.33%;
+  }
+
+  .col-lg-11 {
+    width: 91.66%;
+  }
+
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 
-.col-lg-1 {width: 8.33%;}
-.col-lg-2 {width: 16.66%;}
-.col-lg-3 {width: 25%;}
-.col-lg-4 {width: 33.33%;}
-.col-lg-5 {width: 41.66%;}
-.col-lg-6 {width: 50%;}
-.col-lg-7 {width: 58.33%;}
-.col-lg-8 {width: 66.66%;}
-.col-lg-9 {width: 75%;}
-.col-lg-10 {width: 83.33%;}
-.col-lg-11 {width: 91.66%;}
-.col-lg-12 {width: 100%;}
-}
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1440px){}
+
+@keyframes color-change {
+  from {
+    fill: #edc655;
+  }
+
+  to {
+    fill: #f76414;
+  }
 }
 
 @keyframes color-change {
-  from {fill: #edc655;}
-  to {fill: #f76414;}
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
 }
-@keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
-}
+
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
+
 .cloud-front {
   animation: 30s cloud-move infinite alternate linear;
 }
+
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
+
 .cloud-back {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
