--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ img {
 }
 
 a {
-  color: #099fe3;
+  color: #077eb4;
   text-decoration: none;
 
   /* No underlining */
@@ -86,7 +86,7 @@ a:visited {
 
 a:hover {
   opacity: 0.8;
-  color: #099fe3;
+  color: #077eb4;
   text-decoration: underline;
 
   /* Underlining when hovering over a link */
@@ -101,8 +101,8 @@ a:active {
   display: inline-block;
 
   /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #228c22;
-  color: #fff;
+  background-color: transparent;
+  border: 2px solid #077eb4;
 
   /* needed to override the default link color */
   font-weight: 400;
@@ -113,7 +113,9 @@ a:active {
 }
 
 .button:hover {
+  background-color: #077eb4;
   opacity: 0.8;
+  color: #fff;
 
   /* Reduces the opacity of the button to 80% */
   text-decoration: underline;
@@ -121,12 +123,12 @@ a:active {
 
 .button.contact {
   background-color: transparent;
-  color: #099fe3;
-  border: 2px solid #099fe3;
+  color: #077eb4;
+  border: 2px solid #077eb4;
 }
 
 .button.contact:hover {
-  background-color: #099fe3;
+  background-color: #077eb4;
   color: #fff;
 }
 
@@ -445,7 +447,7 @@ Large devices (1024px or larger)
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-@media only screen and (min-width: 1440px){}
+@media only screen and (min-width: 1440px) {}
 
 @keyframes color-change {
   from {
